--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,3 +103,5 @@ qi_stage_lib(OpenNI2)
 qi_install_header(${OpenNI2_HDR} SUBFOLDER openni2)
 qi_install_header("./Include/Linux-x86/OniPlatformLinux-x86.h" SUBFOLDER openni2/Linux-x86)
 qi_install_header("./Include/Linux-Arm/OniPlatformLinux-Arm.h" SUBFOLDER openni2/Linux-Arm)
+
+add_subdirectory("Samples")
