PS1080 driver: skip frames to lower CPU consumption (#18396)
Add get/setSoftVideoMode that allows reducing the
frame processing rate of the driver. This doesn't
affect the sensor.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,16 @@ set(openni2_SRC ${openni2_SRC} ${XnLib_SRC}
   "./Source/Drivers/OniFile/Formats/XnCodec.cpp"
   "./Source/Drivers/OniFile/Formats/XnStreamCompression.cpp"
 )
-qi_create_lib(OpenNI2 ${openni2_SRC})
+
+file(GLOB OpenNI2_HDR
+  "./Include/*.h"
+)
+
+file(GLOB OpenNI2_driver_HDR
+  "./Include/Driver/*.h"
+)
+
+qi_create_lib(OpenNI2 ${openni2_SRC} ${OpenNI2_HDR} ${OpenNI2_driver_HDR})
 qi_use_lib(OpenNI2 ${XnLib_LIBS})
 qi_stage_lib(OpenNI2)
 
@@ -91,9 +100,6 @@ qi_stage_lib(OpenNI2)
 # architecture header starts by including the Linux-x86 one, then
 # undefines a couple of symbols before redefining them.
 # It is so sad people does not use the macro set by the compiler :'|
-file(GLOB OpenNI2_HDR
-  "./Include/*.h"
-)
 qi_install_header(${OpenNI2_HDR} SUBFOLDER openni2)
 qi_install_header("./Include/Linux-x86/OniPlatformLinux-x86.h" SUBFOLDER openni2/Linux-x86)
 qi_install_header("./Include/Linux-Arm/OniPlatformLinux-Arm.h" SUBFOLDER openni2/Linux-Arm)
