--- a/Samples/Recorder/CMakeLists.txt
+++ b/Samples/Recorder/CMakeLists.txt
@@ -1,2 +1,2 @@
-qi_create_bin(recorder main.cpp NO_INSTALL)
-qi_use_lib(recorder OPENNI2)
+add_executable(recorder main.cpp)
+target_link_libraries(recorder OpenNI2)
